Updated  FirmWare files
Updated FW for the new HW and added new functionalities: CanBusFacility,  NautilusCanBUSMessage , etc

--- a/FirmWare/LegacyFirmWare/platformio.ini
+++ b/FirmWare/LegacyFirmWare/platformio.ini
@@ -8,26 +8,33 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:adafruit_feather_f405]
+[env:genericSTM32F405RG]
 platform = ststm32
 board = genericSTM32F405RG
 board_build.f_cpu = 168000000L
 framework = arduino
 debug_tool = stlink
 upload_protocol = stlink
-monitor_speed = 115200
-lib_archive = false
-build_flags =
-	-D CAN_RX=PA11
-	-D CAN_TX=PA12
-	-D PIN_SERIAL_RX=PA10
-	-D PIN_SERIAL_TX=PA9
-	-D SERIAL_UART_INSTANCE=1
+debug_init_cmds = 
+	set CPUTAPID 0x2ba01477
+	target extended-remote $DEBUG_PORT
+	$INIT_BREAK
+	monitor reset halt
+	$LOAD_CMDS
+	monitor init
+	monitor reset halt
+build_flags = 
+	-D HSE_VALUE=8000000
+	
+	-D HAVE_HWSERIAL1
+	-D HAVE_HWSERIAL4
+	
 	-D PIN_WIRE_SDA=PB7
 	-D PIN_WIRE_SCL=PB6
-	-D HSE_VALUE=8000000
+	
 	-D HAL_CAN_MODULE_ENABLED
+monitor_speed = 115200
 lib_deps = 
-	askuric/Simple FOC@2.2.3
-	adafruit/Adafruit NeoPixel@1.11.0
+	askuric/Simple FOC@^2.1.1
+	Wire
 	SPI
